--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npx ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
     "build": "npx tsc",
     "prepare": "npm run build",
-    "lint": "npx eslint src"
+    "lint": "npx eslint src --fix"
   },
   "author": "",
   "license": "ISC",
@@ -29,8 +29,10 @@
   },
   "dependencies": {
     "@flashbots/ethers-provider-bundle": "^0.3.1",
+    "ethereumjs-common": "^1.5.2",
     "lodash": "^4.17.21",
     "ts-node": "^9.1.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.2"
   }
 }
