--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "npx ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
     "build": "npx tsc",
     "prepare": "npm run build",
-    "lint": "npx eslint src --fix"
+    "lint:sol": "solhint --fix --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
+    "lint:js": "npx eslint src --fix --ignore-path ./.eslintignore --ext .js,.ts ."
   },
   "author": "",
   "license": "ISC",
@@ -28,11 +29,12 @@
     "ethers": "^5.0.23"
   },
   "dependencies": {
-    "@flashbots/ethers-provider-bundle": "^0.3.1",
     "ethereumjs-common": "^1.5.2",
+    "hardhat": "^2.4.3",
     "lodash": "^4.17.21",
+    "solhint": "^3.3.6",
+    "solhint-plugin-prettier": "^0.0.5",
     "ts-node": "^9.1.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.2"
   }
 }
